package de.home.playgrounds.javabasics.exercise9_QuestTracker;

public class QuestUI {
}
